--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/andrewmc201/DigitalScribblePad#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
+    "jquery": "^3.2.1",
     "mysql": "^2.13.0"
   }
 }
